# permcheck

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
benches/: BENCHMARKS.md  evaluate.rs
docs/: DESIGN.md  PROPOSAL.md
homebrew/: permcheck.rb.tmpl
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  permcheck-hook.cmd  permcheck-hook.sh
rules/: permcheck.json  permissions.json
specs/: SPEC.md
src/: bash.rs  engine.rs  lib.rs  main.rs  matcher.rs  rules.rs  settings.rs  types.rs
src/tests/: engine.rs  rules.rs  types.rs
src/tests/bash/: crosscheck.rs  split.rs  tokenize.rs
src/tests/matcher/: bash.rs  generic.rs  path.rs
tests/: adversarial.rs  bash_crosscheck.rs  bash_split.rs  bash_tokenize.rs  cli.rs  default_decision.rs  engine_selection.rs  hook_mode.rs  install.rs  known_issues.rs  load_errors.rs  matcher_bash.rs  matcher_generic.rs  matcher_path.rs  redirects.rs  reference_evasion.rs  reference_loads.rs  rules_grammar.rs  types_extraction.rs  worked_examples.rs
